Cluster-config ported to work with solr through setting ENV vars